--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -73,7 +73,7 @@
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="{{ path('product_create') }}" >Ajout support</a>
-                    <a class="collapse-item" href="{{ path('product_display') }}">Voir les supports</a>
+                    <a class="collapse-item" href="{{ path('admin_backoffice') }}">Voir les supports</a>
         </li>
                     
                    
