--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container-resetpass">
-    <h1>Réinstallation de mot de pass</h1>
+    <h3 class="text-center py-5">Réinstallation de mot de pass</h3>
 <div class="formsection">
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.password) }}
