--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,13 +9,13 @@
 
 	{% endif %}
 
-	{% if app.user %}
+	{# {% if app.user %}
 		<div class="mb-3">
 			Vous êtes connecté(e) comme
 			{{ app.user.userIdentifier }},
 			<a href="{{ path('app_logout') }}">Me déconnecter</a>
 		</div>
-	{% endif %}
+	{% endif %} #}
 	<div class="container-connexion">
 		<h2 class="text-center ">CONNECTEZ-VOUS</h2>
 		<div class="formsection">
