--- a/public/assets/CSS/style.css
+++ b/public/assets/CSS/style.css
@@ -7,92 +7,133 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
     font-family: 'Alkatra', cursive;
+    color: #000;
    
   }
+
    
 body{
  background-color: #bcc1cb;
   text-decoration: none;
   overflow-x:hidden; 
   height: 100%;
-
+  list-style: none;
  
 }
-  body a{
+   /* body a{
   text-decoration: none;
 }
-body ul{
+body ul li {
   list-style-type: none;
-} */
-.container-header img{
-  background: transparent;
+}  */
+h1,h2,h3,h4 {
+  color: #000;
 }
 /****************************Navbar start***********************************/
-.logo img{ 
-    width: 150px; 
-    height: 90px; 
-    display: block;
-    align-items: center; 
-}
 
-.container-header{
-   position: relative;
-    align-items: center;
-    width: 100%;
-    height: 7rem;
-    font-size: 1.7rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.85)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-    border: none;
-    background-color: transparent;
-}
-
-.navbar-nav a {
-  margin-right: 1em;
-  margin-left: 0.5em;
-  color:#254961;
-}
-.navbar-nav img {
-  margin-inline: 40px;
-}
-.container-login{
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: row;
- }
-
-.container-header .navbar-nav a:hover{
-    color:#ba8a62;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  transition: all 0.3s ease;
 }
-.dropdown-content {
+.navbar .navbar-brand a img {
+  width: 100px;
+}
+.navbar ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem 2rem;
+  list-style-type: none;
+}
+.navbar ul li a{
+  display: flex;
+  align-items: center;
+  color: #000; 
+  font-size: 1.4rem;
+  
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+.navbar ul li a img {
+  width: 35px;
+  margin-right: 0.5rem;
+}
+.navbar ul li a:hover,
+.navbar .active-link {
+  color: #4f84cf;
+  text-decoration: none;
+}
+
+/* Dropdown style */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content,
+.about-dropdown-content {
   display: none;
   position: absolute;
-  background-color: #ededed;
-  min-width: 140px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  top: 1.5rem;
+  background-color: #fff;
+  min-width: 120px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+}
+.about-dropdown-content {
+  right: 0;
 }
 
-.dropdown-content a {
-  color:#254961;
+.dropdown-content a,
+.about-dropdown-content a {
+  color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
 }
 
-.dropdown-content a:hover { color: #219EE2;}
+.dropdown-content a:hover,
+.about-dropdown-content a:hover {
+  background-color: #eee;
+  text-decoration: none;
+}
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content,
+.dropdown:hover .about-dropdown-content {
   display: block;
 }
 
-.account{
-  padding-right: 10%;
+/* toggle btn */
+.navbar .navbar-outer-list .toggle-btn {
+  display: none;
+  cursor: pointer;
+}
+.container-login ul li a{
+  display: flex;
+  flex-direction: row;
+
 }
 
+
+/****************************Navbar end***********************************/
+
+.home img{
+  background-size: cover;
+  height: 40rem;
+  width: 100%;
+  
+
+}
 .button ,input[type="submit"] {
   background-color: #219EE2;
   border-style: none;
@@ -101,8 +142,8 @@ body ul{
   cursor: pointer;
   display: grid;
     text-align: center;
-    width: 11vw;
-    height: 8vh;
+    width: 10vw;
+    height: 7vh;
     place-content: center;
    margin:auto;
     padding: 20px 10px;
@@ -112,53 +153,60 @@ body ul{
     border-top-left-radius: 40px ;
       border-bottom-right-radius: 40px ;
       letter-spacing : 1px;
+  } 
+  .container-login .button  {
+    text-decoration: none;
+    color:white;
   }
 /***********************************Navbar end*************************************/
-
-/**********************moncmpte start******************/
-table {
+/* Container */
+/* .container {
+  margin-top: 6rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem 1.5rem;
+}
+.container .content {
   display: flex;
- justify-content: center;
- text-align: center;
-  border-spacing: 0;
-  
-} 
-.container-profile{
-  height: 50vh;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  background-color: #eee;
+  height: 60vh;
+} */ 
+
+/* Container
+
+/************************** Start Of Profile Style ************************/
+.profile-info {
+  width: 90%;
+  margin: 2rem auto;
+  padding: 8% 4%;
+  border: 1px solid #eee;
+  border-radius: 6px;
 }
-.container-account{
-  height: 90vh;
-  width: 15vw;
+.profile-info > div {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 2rem;
 }
-.list{
-  width: 10rem;
-  padding-top: 4em;
-  text-align: center;
- 
+.profile-info > div p {
+  display: flex;
+  align-items: start;
 }
-.link :hover {background-color: #f1f1f1;}
-.sidebar{
-  height: 100%;
- 
-  background-color: #c4d5df;
+.profile-info > div p:first-child {
+  flex: 0 1 100px;
+  color: #4f84cf;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
 }
-/**********************moncmpte end******************/
-
-
-
- 
-
-
-
-.home img{
-    background-size: cover;
-    height: 40rem;
-    width: 100%;
-    
-
+.profile-info > div p:last-child {
+  max-width: 80%;
+  flex: 2 1 300px;
 }
 
-
+/* ******************************End Of Profile Style**************************/
 
 /************************cards section start**************************/
 .container-cards  {
@@ -189,7 +237,7 @@ table {
   margin-bottom: 50px;
   }
   .heading h1{
-    color: #254961;
+    color: black;
   }
   
    .row {
@@ -237,10 +285,7 @@ table {
 
  .container-abonner{
  width: 100%;
- /* margin: 10rem; */
- /* background-color: ; */
-  
-  
+
  }
  .row-abonner{
     display: flex;
@@ -330,7 +375,7 @@ table {
 .sec1{
   margin-top: 15vh;
   margin-bottom: 15vh;
-  margin-left: 10%;
+  
   height:50vh;
   display:flex;
   justify-content: center;
@@ -339,9 +384,10 @@ table {
 .sec1 h1{
   position: relative;
   z-index: 3;
-
-
 } 
+.content .sec1 a   {
+  text-decoration: none;
+}
 
 .content{
   z-index: 3;
@@ -351,9 +397,10 @@ table {
   position:absolute;
   height: 70vh;
   width: 100%;
-  background-color: #b6d7eb;
+  background-color: #219EE2;
+  opacity: 0.5;
   z-index: 2;
-  border-radius: 0% 0% 80% 70%;
+  border-radius: 0% 0% 90% 90%;
   transform: scaleX(1.2);
 }
 .sec1::after{
@@ -361,7 +408,7 @@ table {
   position:absolute;
   height: 70vh;
   width: 80%;
-  background-color:  #b6d7eb;
+  background-color:  #219EE2;
   z-index: 1;
   opacity: 0.4;
   border-radius:  0% 0% 0% 0% ;
@@ -371,45 +418,217 @@ table {
   width: 8rem;
   height: 50vh;
   display: flex;
-  justify-content: flex-start;
+  border-radius: 10px;
+  justify-content: center;
   
  }
  .sec2{
   height:30vh;
+ 
  }
 
  /*****************************contact section end************/
 
 
  /***************************téstimonial section start************/
- 
- 
-/***************************téstimonial section end************/
-
-/* .img-contact{
-  border-radius: 10px;
-} */
- /* .container-contact{
-  width: 40%;
-  height: 100vh;
-  background-color: #dfdcdc;
+ .heading {
+  text-align: center;
+  color: black;
+  font-size: 30px;
+  font-weight: 700;
   position: relative;
-  margin: 5% auto;
+  margin-bottom: 70px;
+  text-transform: uppercase;
+  z-index: 999;
+}
+/*-----Testimonial-------*/
+
+/* .testimonial {
+  min-height: 375px;
+  position: relative;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #ddd;
+}
+#testimonial4 .carousel-inner .item {
+  overflow: hidden;
+}
+
+.testimonial4_indicators .carousel-indicators {
+  left: 0;
+  margin: 0;
+  width: 100%;
+  font-size: 0;
+  height: 20px;
+  bottom: 15px;
+  padding: 0 5px;
+  cursor: e-resize;
+  overflow-x: auto;
+  overflow-y: hidden;
+  position: absolute;
+  text-align: center;
+  white-space: nowrap;
+}
+.testimonial4_indicators .carousel-indicators li {
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  border: none;
+  text-indent: 0;
+  margin: 2px 3px;
+  cursor: pointer;
+  display: inline-block;
+  background: #ffffff;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+}
+.testimonial4_indicators .carousel-indicators .active {
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  border: none;
+  margin: 2px 3px;
+  background-color: #9dd3af;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+}
+.testimonial4_indicators .carousel-indicators::-webkit-scrollbar {
+  height: 3px;
+}
+.testimonial4_indicators .carousel-indicators::-webkit-scrollbar-thumb {
+  background: #eeeeee;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+}
+
+.testimonial4_control_button .carousel-control {
+  top: 175px;
+  opacity: 1;
+  width: 40px;
+  bottom: auto;
+  height: 40px;
+  font-size: 10px;
+  cursor: pointer;
+  font-weight: 700;
+  overflow: hidden;
+  line-height: 38px;
+  text-shadow: none;
+  text-align: center;
+  position: absolute;
+  background: transparent;
+  border: 2px solid #ffffff;
+  text-transform: uppercase;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-transition: all 0.6s cubic-bezier(0.3, 1, 0, 1);
+  transition: all 0.6s cubic-bezier(0.3, 1, 0, 1);
+}
+.testimonial4_control_button .carousel-control.left {
+  left: 7%;
+  top: 50%;
+  right: auto;
+}
+.testimonial4_control_button .carousel-control.right {
+  right: 7%;
+  top: 50%;
+  left: auto;
+}
+.testimonial4_control_button .carousel-control.left:hover,
+.testimonial4_control_button .carousel-control.right:hover {
+  color: #000;
+  background: #fff;
+  border: 2px solid #fff;
+}
+
+.testimonial4_header {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 550px;
+  display: block;
+  margin: 30px auto;
+  text-align: center;
+  position: relative;
+}
+.testimonial4_header h4 {
+  font-size: 30px;
+  font-weight: 600;
+  position: relative;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.testimonial4_slide {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 70%;
+  margin: auto;
+  padding: 20px;
+  position: relative;
+  text-align: center;
+}
+
+.testimonial4_slide p {
+  font-size: 20px;
+  line-height: 1.4;
+  margin: 40px 0 20px 0;
+}
+.testimonial4_slide h4 {
+  font-size: 22px;
+}
+
+.testimonial .carousel {
+  padding-bottom: 50px;
+}
+.testimonial .carousel-control-next-icon,
+.testimonial .carousel-control-prev-icon {
+  width: 35px;
+  height: 35px;
+}
+ 
+**************************téstimonial section end*********** */
+
+/* Start Of Testimonials Style */
+.title {
+  margin-bottom: 2rem;
+  width: fit-content;
+  margin: auto;
+}
+.title::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #4f84cf;
+  margin: 0.5rem auto;
+}
+.testimonial {
+  padding: 2rem 1rem;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  width: 90%;
+  margin: 1rem auto;
+}
+.testimonial .testimonial-info h4 {
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+  color: #4f84cf;
+}
+/* End Of Testimonials Style */
+
+.container-methode{
+  width: 70%;
+  
   
 }
-.container-contact h1{
-  font-weight: 100;
-  color: #254961;
-} */
- /* .row-contact{
-  padding-top: 40px;
-  padding-bottom: 40px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 12rem;
- }  */
-
+.container-methode p{
+font-size: 1.5rem;
+}
 .fields{
  
   display: flex;
@@ -578,8 +797,9 @@ input[type="submit"]:active {
   height: 90vh;
   background: #dfdcdc;
   border-radius: 4px;
-   box-shadow:  rgba(50, 50, 80, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
-}
+   box-shadow:  rgba(50, 50, 80, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; 
+ }
+
 .container-connexion h2{
   color: #219EE2;
   padding-top: 2.5em;
@@ -636,67 +856,56 @@ flex-direction: column;
 }
 
 
-
+/************************responsive***************/
  
  @media only screen and (max-width: 768px){
-  .mobile-container {
-    max-width: 480px;
-    margin: auto;
-    background-color: #555;
-    height: 500px;
-    color: white;
-    border-radius: 10px;
-  }
- .topnav {
-    overflow: hidden;
-    background-color: #FFF;
-    position: relative;
-  }
-  
-  .topnav #myLinks {
+  .navbar .navbar-inner-list {
     display: none;
   }
-  
-  .topnav li {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  .navbar-inner-list ul li a {
+    font-size: small;
+  }
+  .navbar .navbar-outer-list .toggle-btn {
     display: block;
   }
-  .topnav li.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
+  .navbar .show {
+    position: fixed;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    top: 9rem;
+    left: 0;
+    width: 100%;
+    height: 70vh;
+    z-index: 998;
+    display: flex;
+    padding: 1rem;
+  }
+  .navbar .show ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  .dropdown-content {
+    left: 100%;
+    top: 10px;
   }
   
-  .topnav li:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .active {
-    background-color: #04AA6D;
-    color: white;
-  }
-    
-.row{
-  flex-direction: column;
-}
 
-.image img{
-  width: 8rem;
-  display: grid;
-  place-content: center;
-}
-.button{
+.btn-card .button ,
+.btn-abonnez .button,
+.container-login .button,
+.package a{
   width: 12vw;
+  height: 5vh;
   border-top-left-radius: 8px ;
   border-bottom-right-radius: 8px ;
-      font-size: 8px;
+      font-size: 0.5rem;
 }
+
+
+.container-cards h2 {
+  font-size: 1.5rem;
+}
+
 .row-abonner{
   flex-direction: column;
   
@@ -711,11 +920,34 @@ flex-direction: column;
 margin:auto;
 }
  }
- @media only screen and (min-width: 768px){
+ @media only screen and (min-width: 768px)and (max-width: 1023px){
 
 .coco{
-  display:none;
+  display:block;
+}
+.navbar ul li a{
+   
+  font-size: 1.5rem;
+  
+ }
+ .navbar ul li a img {
+  width: 15px;
+  margin-right: 0.2rem;
 }
 
+.container-login ul li a{
+  margin: auto;
+}
+/* .package{
+  height: 50vh;
+  width:60% ;
+} */
 
  }
+
+/* @media only screen and (min-width: 1024px){
+  .coco{
+    display: none;
+  }
+   */
+ 
