--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -1,49 +1,82 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}MonCompte - {{ parent() }}{% endblock %}
+{% block title %}Profile Utilisateur{% endblock %}
 
 {% block body %}
- 
-    {# <nav class="navesidebar">
-      <div class="logo">
-        <i class="bx bx-menu menu-icon"></i>
-        <span class="logo-name">CodingLab</span>
-      </div> #}
-      <div class="container-account ">
-       <div class="sidebar">
-        
-        <div class="sidebar-content">
-          <ul class="lists">
-            <li class="list">
-              <a href="{{ path('profile') }}" class="nav-link">
-               <i class="fa-thin fa-address-card"></i>
-                <span class="link">Profile</span>
-              </a>
-            </li>
-            <hr>
-            
-
-            <li class="list">
-              <a href="{{ path('user_comments')}}" class="nav-link">
-                <i class="bx bx-bell icon"></i>
-                <span class="link">Mes commentaires</span>
-              </a>
-            </li>
-            <hr>
-          </ul>
-
-          
+ <div class="container">
+ {% for type, messages in app.flashes  %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ type}}  text-center">
+                       {{ message }}
+                        </div>{% endfor %}
+                {% endfor %}
+      <h2 class="title">Données personnelles de {{ app.user.nickname }} </h2>
+      <div class="profile-info">
+        <div class="profile-name">
+          <p>Prenom</p>
+          <p class="name">{{ app.user.nickname }}</p>
         </div>
+        <div class="profile-email">
+          <p>Email</p>
+          <p class="email">{{ app.user.email }}</p>
+        </div>
+        <div class="profile-age">
+          <p>Age</p>
+          <p class="age">{{ app.user.age }}</p>
+        </div>
+        <div class="profile-avis">
+          <p>Mes Avis</p>
+{% for comment in comments %}
+          <p class="avis">
+            {{ comment.content }} . '/'
+          </p>
+          {% endfor %} 
+        </div>
+      </div>
+    </div>
+ {# <div class="container col-3 ">
+               
+                {% for type, messages in app.flashes  %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ type}}  text-center">
+                       {{ message }}
+                        </div>{% endfor %}
+                {% endfor %}
+                </div>
+		<div class="text-center py-5">
+			<h1>Données personnelles de {{ app.user.nickname }} </h1>
+		</div>
+        <div class="container-profile">
+        <table class="table table-info table-bordered">
+        <tbody>
+        <tr>
+        <td>Prénom</td>
+        <td>{{ app.user.nickname }}</td>
+        </tr>
+        <tr>
+        <td>Email</td>
+        <td>{{ app.user.email }}</td>
+        </tr>
+        <tr>
+        <td>Age</td>
+        <td>{{ app.user.age }}</td>
+        </tr>
         
-      </div>
-      </div>
-    {# </nav> #}
-
-    <section class="overlay"></section>
-{% block javascript %}
-<script src="https://kit.fontawesome.com/f43726de96.js" crossorigin="anonymous"></script>
-<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-     
-{% endblock %}
-
+        
+        <tr>
+        <td>Mes Avis</td>
+        {% for comment in comments %}
+        <td>{{ comment.content }}</td>
+       {% endfor %} 
+        </tr>
+         <td>
+         {# <a href="{{ path('edit_comment') }}" class="btn btn-info">modifier</a> #}
+        {# <a href="{{ path('delet_comment', {'id': comment.id}) }}" class="btn btn-danger">Supprimer</a>
+        </td>#} 
+         
+         {# </tbody>
+        </table>
+        </div>
+        </div>
+		 #} 
 {% endblock %}
