--- a/templates/account/editpass.html.twig
+++ b/templates/account/editpass.html.twig
@@ -14,16 +14,16 @@
                 </div>
 		<div class="col-xs4">
 			<h1>Modification du mot de passe de {{ app.user.nickname }}</h1>
-            <form method="post">
-                <div class="form-field">
+            <form method="post ">
+                <div class="form-field d-flex justify-content-center">
                     <label for="pass">Mot de passe</label>
                     <input type="password" id="pass" name="pass" class="form-control">
                 </div>
-                <div class="form-field">
+                <div class="form-field d-flex justify-content-center">
                     <label for="pass2">Confirmer le mot de passe</label>
                     <input type="password" id="pass2" name="pass2" class="form-control">
                 </div>
-                <button class="btn blue">Valider</button>
+                <button type="submit" class="button">Valider</button>
             
             </form>
 		</div>
