--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
 <!-- home section start -->
+
+      
+     
   <section class="home  m-5  d-flex justify-content-center">
   <img src="{{ asset('assets/images/b.jpg') }}" alt="" class="img-fluid">
     <div class="content ">
@@ -21,7 +24,7 @@
 
   <div class=" container-cards ">
     <div class="heading">
-      <h1 class="text-center  py-5"> Choisir Vôtre Niveau</h2>
+      <h2 class="text-center  py-5"> Choisir Vôtre Niveau</h2>
     </div>
 
     
@@ -50,11 +53,11 @@
     <div class="container-abonner">
       <div class="row-abonner m-5">
         <div class=" col-md-6 mb-5 mb-md-0">
-          <img src="assets/images/abonner.jpg" alt="Image" class=" img-fluid">
+          <img src="{{asset('assets/images/abonner.jpg')}}" alt="ImageInsciption" class=" img-fluid">
         </div>
         <div class="write-section col-md-5 py-5 ">
           <h3 class="text-black p-3">Apprendre et Jouer Avec Nous!</h3>
-          <img src="assets/images/abonner.jpg" alt="Image" class="coco img-fluid">
+          <img src="{{asset('assets/images/abonner.jpg')}}" alt="ImageInscription" class="coco img-fluid">
           <p >Apprenez l'arabe pour les enfants en ligne grâce aux vidéos, chansons, histoires , et plain des activités pratiques.
 
             Grâce à notre méthode d'auto-apprentissage, les enfants peuvent apprendre l'arabe à leur rythme,
@@ -86,7 +89,7 @@
             {% for category in categories %}
           {% if category.title is same as ('Coloriage') %}
     
-            <p><a  onclick="myAccFunc('{{ category.title }}')" href="{{ path('index_category',{'categoryId': category.id }) }}" class="button  mt-4">{{ category.title }}</a></p>
+            <p><a href="{{ path('index_category',{'categoryId': category.id }) }}" class="button  mt-4">{{ category.title }}</a></p>
           {% endif %} 
           {% endfor %}
          </div>
@@ -119,19 +122,8 @@
   <!--  fun section end -->
 
   <!-- form contact start -->
-  {# <div class="container-contact">
-    <div class="row-contact">
-    <div class="image-contact">
-      <img src="assets/images/contactus.jpg" alt="">
-    </div>
-<button class="button" >
-<a href="{{ path('app_contact')}}">Contactez-Nous</a>
-</button>
-   
-    </div>
-  </div>
-</div> #}
-<section class="sec1">
+ 
+<section class="sec1 mb-2">
 <div class="content">
 <a href="{{ path('app_contact')}}" class="text-decoration-none">
 <h1 class="text-center text-light py-3 ">Contactez-Nous</h1>
@@ -139,7 +131,7 @@
 </a>
 </div>
 </section>
-<section class="sec2"></section>
+<section class="sec2 mb-2 "></section>
 
 
   <!-- form contact end -->
@@ -149,8 +141,51 @@
   {# slider  #}
    
             
-  
-    
+   {# <section class="testimonial text-center">
+      <div class="container">
+        <div class="heading">Testimonial</div>
+         
+         <div id="testimonial4"
+          class="carousel slide testimonial4_indicators testimonial4_control_button thumb_scroll_x swipe_x"
+          data-ride="carousel"
+          data-pause="hover"
+          data-interval="5000"
+          data-duration="2000">
+        
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+            
+              <div class="testimonial4_slide">{% for comment in comments %}
+               
+                <h4>{{ comment.user.nickname }}</h4>
+                <p>
+                 {{comment.content }}
+                </p>
+              </div>{% endfor %}
+              
+            </div>
+            
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#testimonial4"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#testimonial4"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- partial -->
+    #}
+   
 
 
 {% endblock %}
