--- a/templates/admin/comments.html.twig
+++ b/templates/admin/comments.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 
- <h1 class="text-center py-3">Gestion comments</h1>
+ <h1 class="text-center py-3">Gestion commentaires</h1>
 
     <table class="table table-secondary ">
         <thead>
