--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -73,7 +73,7 @@
             <a class="nav-link collapsed" href="{{ path('type') }}" 
                aria-expanded="true" aria-controls="collapseUtilities">
                 <i class="fas fa-fw fa-wrench"></i>
-                <span>Gestion format</span>
+                <span>Gestion formats</span>
                 </a>
                 <hr class="sidebar-divider">
 
@@ -91,7 +91,7 @@
             <a class="nav-link collapsed" href="{{ path('admin_comments') }}" 
                aria-expanded="true" aria-controls="collapseUtilities">
                 <i class="fas fa-fw fa-wrench"></i>
-                <span>Gestion comments</span>
+                <span>Gestion commentaires</span>
                 </a>
           
              
