--- a/public/assets/CSS/style.css
+++ b/public/assets/CSS/style.css
@@ -22,14 +22,18 @@ body{
   list-style: none;
  
 }
-   /* body a{
-  text-decoration: none;
+a{
+  text-decoration: none !important;
 }
-body ul li {
+   
+ ul li {
   list-style-type: none;
-}  */
+}  
 h1,h2,h3,h4 {
   color: #000;
+}
+dl,ol,ul{
+  margin-bottom: 0 !important;
 }
 /****************************Navbar start***********************************/
 
@@ -77,7 +81,7 @@ h1,h2,h3,h4 {
 /* Dropdown style */
 .dropdown {
   position: relative;
-  display: inline-block;
+  /* display: inline-block; */
 
 }
 
@@ -85,9 +89,9 @@ h1,h2,h3,h4 {
 .about-dropdown-content {
   display: none;
   position: absolute;
-  top: 2.5rem;
+  top: 2.2rem;
   background-color: #fff;
-  min-width: 120px;
+  width: 160px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 999;
 }
@@ -119,12 +123,25 @@ h1,h2,h3,h4 {
   display: none;
   cursor: pointer;
 }
+.navbar .close-btn {
+  position: absolute;
+  top: 2rem;
+  right: 1.2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: none;
+}
+/* .navbar .close-btn {
+    display: none;
+} */
 .container-login ul li a{
   display: flex;
   flex-direction: row;
 
 }
-
+.navbar .navbar-outer-list{
+  margin-bottom: 0;
+}
 
 /****************************Navbar end***********************************/
 
@@ -137,46 +154,32 @@ h1,h2,h3,h4 {
 }
 .button ,input[type="submit"] {
   background-color: #219EE2;
-  border-style: none;
-  box-sizing: border-box;
   color: #FFFFFF;
   cursor: pointer;
   display: grid;
     text-align: center;
-    width: 10vw;
-    height: 7vh;
     place-content: center;
    margin:auto;
-    padding: 20px 10px;
-  font-size: 20px;
+    padding: 10px;
+border:2px solid  #219EE2;
   position: relative;
   text-decoration: none;
-    border-top-left-radius: 40px ;
-      border-bottom-right-radius: 40px ;
-      letter-spacing : 1px;
+      border-radius: 4px;
+      width: 120px;
+      max-width: 160px;
   } 
+.button:hover,
+.button:focus {
+  background-color: transparent;
+  color: #219EE2 ;
+  transition: 0.1s ease;
+}
   .container-login .button  {
     text-decoration: none;
     color:white;
   }
 /***********************************Navbar end*************************************/
-/* Container */
-/* .container {
-  margin-top: 6rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem 1.5rem;
-}
-.container .content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 2rem;
-  background-color: #eee;
-  height: 60vh;
-} */ 
 
-/* Container
 
 /************************** Start Of Profile Style ************************/
 .profile-info {
@@ -214,7 +217,6 @@ h1,h2,h3,h4 {
   width: 95%;
   margin: 70px auto;
   border-radius: 10px;
-  /* background-color:  #c4d5df; */
   opacity: 0.9;
  
   }
@@ -284,25 +286,14 @@ h1,h2,h3,h4 {
 
 /*inscription section*/
 
- .container-abonner{
- width: 100%;
+ 
 
- }
+ 
  .row-abonner{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 12rem;
-    
+  padding: 1rem;
+   
 }
 
-.write-section{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-
-}
 .write-section p {
   font-size: 20px;
 } 
@@ -316,7 +307,6 @@ h1,h2,h3,h4 {
   
 .container-fun{
   width: 95%;
-  /* height: 90vh; */
   margin-top: 20px;
   background-color: #F6F5F5;
     margin-left: auto;
@@ -343,14 +333,14 @@ h1,h2,h3,h4 {
   margin-top: 8vh;
 }
 .img-wrap img  {
-  width: 11vw;
+  width: 100%;
+  object-fit: contain;
+  height:180px;
   padding-top: 40px;
 }
 .package{
-  margin-bottom:60px ;
-  margin-top: 10vh;
-  height: 50vh;
-  width:20vw ;
+  padding:1rem;
+  width: 100%;
   border-radius: 10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   
@@ -360,12 +350,7 @@ h1,h2,h3,h4 {
 
 
 
-.button:hover,
-.button:focus {
-  opacity: 0.9;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  transition: 0.1s ease;
-}
+
 
 .package:hover{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -424,7 +409,7 @@ h1,h2,h3,h4 {
   
  }
  .sec2{
-  height:30vh;
+  height:20vh;
  
  }
 
@@ -440,158 +425,9 @@ h1,h2,h3,h4 {
   position: relative;
   margin-bottom: 70px;
   text-transform: uppercase;
-  z-index: 999;
-}
-/*-----Testimonial-------*/
-
-/* .testimonial {
-  min-height: 375px;
-  position: relative;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background-color: #ddd;
-}
-#testimonial4 .carousel-inner .item {
-  overflow: hidden;
+  /* z-index: 999; */
 }
 
-.testimonial4_indicators .carousel-indicators {
-  left: 0;
-  margin: 0;
-  width: 100%;
-  font-size: 0;
-  height: 20px;
-  bottom: 15px;
-  padding: 0 5px;
-  cursor: e-resize;
-  overflow-x: auto;
-  overflow-y: hidden;
-  position: absolute;
-  text-align: center;
-  white-space: nowrap;
-}
-.testimonial4_indicators .carousel-indicators li {
-  padding: 0;
-  width: 14px;
-  height: 14px;
-  border: none;
-  text-indent: 0;
-  margin: 2px 3px;
-  cursor: pointer;
-  display: inline-block;
-  background: #ffffff;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-}
-.testimonial4_indicators .carousel-indicators .active {
-  padding: 0;
-  width: 14px;
-  height: 14px;
-  border: none;
-  margin: 2px 3px;
-  background-color: #9dd3af;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-}
-.testimonial4_indicators .carousel-indicators::-webkit-scrollbar {
-  height: 3px;
-}
-.testimonial4_indicators .carousel-indicators::-webkit-scrollbar-thumb {
-  background: #eeeeee;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-}
-
-.testimonial4_control_button .carousel-control {
-  top: 175px;
-  opacity: 1;
-  width: 40px;
-  bottom: auto;
-  height: 40px;
-  font-size: 10px;
-  cursor: pointer;
-  font-weight: 700;
-  overflow: hidden;
-  line-height: 38px;
-  text-shadow: none;
-  text-align: center;
-  position: absolute;
-  background: transparent;
-  border: 2px solid #ffffff;
-  text-transform: uppercase;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: all 0.6s cubic-bezier(0.3, 1, 0, 1);
-  transition: all 0.6s cubic-bezier(0.3, 1, 0, 1);
-}
-.testimonial4_control_button .carousel-control.left {
-  left: 7%;
-  top: 50%;
-  right: auto;
-}
-.testimonial4_control_button .carousel-control.right {
-  right: 7%;
-  top: 50%;
-  left: auto;
-}
-.testimonial4_control_button .carousel-control.left:hover,
-.testimonial4_control_button .carousel-control.right:hover {
-  color: #000;
-  background: #fff;
-  border: 2px solid #fff;
-}
-
-.testimonial4_header {
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 550px;
-  display: block;
-  margin: 30px auto;
-  text-align: center;
-  position: relative;
-}
-.testimonial4_header h4 {
-  font-size: 30px;
-  font-weight: 600;
-  position: relative;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.testimonial4_slide {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 70%;
-  margin: auto;
-  padding: 20px;
-  position: relative;
-  text-align: center;
-}
-
-.testimonial4_slide p {
-  font-size: 20px;
-  line-height: 1.4;
-  margin: 40px 0 20px 0;
-}
-.testimonial4_slide h4 {
-  font-size: 22px;
-}
-
-.testimonial .carousel {
-  padding-bottom: 50px;
-}
-.testimonial .carousel-control-next-icon,
-.testimonial .carousel-control-prev-icon {
-  width: 35px;
-  height: 35px;
-}
- 
-**************************téstimonial section end*********** */
 
 /* Start Of Testimonials Style */
 .title {
@@ -627,7 +463,7 @@ h1,h2,h3,h4 {
   
   
 }
-.container-methode p{
+.container-quisuisje p,.container-methode p{
 font-size: 1.5rem;
 }
 .fields{
@@ -661,60 +497,42 @@ font-size: 1.5rem;
   position: relative;
   width: 100%;
   background:#219EE2;
-  min-height: 110px;
+  min-height: 150px;
   padding: 20px 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
-.social-icon,
-.menu {
-  position: relative;
+.footer .menu{
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
+  align-items:center;
+  gap: 1rem;
+}
+.footer .menu__item a{
+color: #fff !important;
+
+}
+.footer .menu__item a:hover{
+  color:  #4f84cf;
 }
 
-.social-icon__item,
-.menu__item {
-  list-style: none;
-}
-
-.social-icon__link {
-  font-size: 2rem;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-}
-.social-icon__link:hover {
-  transform: translateY(-8px);
-}
-
-.menu__link {
-  font-size: 1.2rem;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-  text-decoration: none;
-  opacity: 0.75;
-  font-weight: 300;
-}
-
-.menu__link:hover {
-  opacity: 1;
-}
 
 .footer p {
   color: #fff;
   margin: 15px 0 10px 0;
   font-size: 1rem;
   font-weight: 300;
+}
+
+.container-quisuisje{
+padding: 2rem 1rem;
+border: 1px solid #eee;
+border-radius: 4px;
+width: 70%;
+margin: 1rem auto;
+
 }
 /**********************footer end**********************************/
 
@@ -732,13 +550,9 @@ font-size: 1.5rem;
   box-shadow:  rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
+.container
 
 
- .formsection {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
 
 
 
@@ -749,7 +563,7 @@ input[type="password"] ,.form-register{
   /* background-color:rgb(199, 199, 201); */
   margin-bottom: 20px;
   padding: 4px;
-  width: 15vw;
+ 
   height: 40px;
   font-size: 1em;
   transition: 0.5s ease;
@@ -791,26 +605,52 @@ input[type="submit"]:active {
 /**********************inscription form end****************** */
 
 /*******************************connection form start******************/
- .container-connexion{
+ .formsection{
   position: relative;
-  margin: 5% auto;
-  width:35vw;
-  height: 90vh;
-  background: #dfdcdc;
-  border-radius: 4px;
-   box-shadow:  rgba(50, 50, 80, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; 
+  padding: 1rem;
+  width:50%;
+  margin: 2rem auto;
+ border: 1px solid #eee;
+ border-radius: 6px;
+ min-height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  
  }
 
-.container-connexion h2{
-  color: #219EE2;
-  padding-top: 2.5em;
+ .formsection form {
+  width: 100%;
+ }
+ .formsection form .divinput{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem !important;
+ }
+
+ .h2connexion{
+  color:black;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+
+ 
+}
+.container-connexion{
+  width: 75%;
+  max-width: 90%;
+  margin: 0 auto;
 }
 
  .container-resetpass{
   
-  height: 60vh;
+  height: 70vh;
 } 
 
+.container-contact{
+min-height: 80vh;
+padding: 2rem 1rem;
+}
  
 /*******************************connection form end******************/
 .pdf{
@@ -831,8 +671,8 @@ input[type="submit"]:active {
 
 }
 .img-display-category   {
-  height: 50vh;
-  width: 30vw;
+
+  width: 20vw;
 }
  .container-comments{
  
@@ -858,8 +698,7 @@ flex-direction: column;
 
 
 /************************responsive***************/
- 
- @media only screen and (max-width: 992px){
+@media only screen and (max-width: 1200px){
   .navbar .navbar-inner-list {
     display: none;
   }
@@ -873,35 +712,44 @@ flex-direction: column;
     position: fixed;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    top: 9rem;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     z-index: 998;
     display: flex;
     padding: 1rem;
-  }
-  .navbar .show ul {
+    justify-content: center;
+    }
+    .navbar .show ul {
     flex-direction: column;
-    align-items: center;
-  }
+    align-items: start;
+    }
+  
   .dropdown-content {
     left: 100%;
     top: 10px;
   }
+  .navbar .close-btn {
+    display: block;
+}
+  
+}
+
+
+ @media only screen and (max-width: 992px){
   
 
 .btn-card .button ,
 .btn-abonnez .button,
 .container-login .button,
 .package a{
-  width: 12vw;
-  height: 5vh;
-  border-top-left-radius: 8px ;
-  border-bottom-right-radius: 8px ;
-      font-size: 0.5rem;
+  
+      font-size: 12px;
+} 
+.container-connexion{
+  width: 90%;
 }
-
 
 .container-cards h2 {
   font-size: 1.5rem;
@@ -911,27 +759,18 @@ flex-direction: column;
   flex-direction: column;
   
 } 
-.container-abonner img{
-  display: none;
-}
-.coco{
-  display: block!important;
-}
+
+
 .abonner-section{
 margin:auto;
 }
  }
- @media only screen and (min-width: 993px)and (max-width: 1023px){
-  .row-abonner{
-    flex-direction: column;
-    
-  } 
-  .container-abonner img{
-    display: none;
-  }
-.coco{
-  display:block!important;
-}
+
+ @media only screen and (min-width: 768px)and (max-width: 1023px){
+
+ 
+  
+
 .abonner-section{
   margin:auto;
   }
@@ -948,10 +787,7 @@ margin:auto;
 .container-login ul li a{
   margin: auto;
 }
-/* .package{
-  height: 50vh;
-  width:60% ;
-} */
+
 
  }
 
