--- a/templates/admin/admin-backoffice.html.twig
+++ b/templates/admin/admin-backoffice.html.twig
@@ -12,7 +12,7 @@
    <h4 >filtrer selon categorie</h4>
   <a href="{{ path('admin_backoffice') }}"><button class="btn active btn-dark" > tout</button></a>
   {% for category in categories %}
-  {% if category.title is same as ('Lessons') or category.title is same as ('Coloriage') or category.title is same as ('Chansons') or category.title is same as ('Histoires')  or category.title is same as ('Activités') %}
+  {% if category.title is same as ('Leçons') or category.title is same as ('Coloriage') or category.title is same as ('Chansons') or category.title is same as ('Histoires')  or category.title is same as ('Activités') %}
   <a href="{{ path('product_display',{'categoryId': category.id }) }}"><button class="btn active btn-dark"> {{ category.title }}</button></a>
   
   {% endif %}
