--- a/templates/admin/editproduct.html.twig
+++ b/templates/admin/editproduct.html.twig
@@ -15,7 +15,8 @@
     {{ form_row(dataForm.level) }}
     {{ form_row(dataForm.editFile) }}
     {{ form_row(dataForm.file) }}
- 
+    
+ //afficher le fichier ce que on veux modifier
     {% if product.type.title is same as ('PDF')  %}
       <embed
 	src="{{ asset('upload/') }}{{product.file}}"
@@ -26,10 +27,6 @@
  {% elseif product.type.title is same as ('jpg') or product.type.title is same as('png') %}
       <img src="{{ asset('upload/') }}{{product.file}}"/> 
 
-{% elseif product.type.title is same as ('MP4') %}
- <video width="320" height="240" controls autoplay>
-      <source src="" type=video/mp4>
-    </video>
 {% else %}
 <iframe width="500" height="320" src="{{ product.file }}">
     </iframe>
@@ -42,16 +39,5 @@
     </div>
 
 
-
-
-    {# // <script>
-
-        var loadFile = function(event){
-            var image = document.getElementById('file');
-
-            image.src = URL.createObjectURL(event.target.files[0]);
-        };
-
-     </script> #}
 {% endblock %}
 
