--- a/templates/emails/registration.html.twig
+++ b/templates/emails/registration.html.twig
@@ -1,5 +1,5 @@
 <h1>Activez votre compte</h1>
 <p>Bonjour {{ user }}</p>
-<p>votre inscription sur le site est à valider en cliquant sur le lien ci-dessous:</p>
+<p>votre inscription sur francoarabophone est à valider en cliquant sur le lien ci-dessous:</p>
 <p><a href="{{ absolute_url(path('verify_email' , {token: token})) }}">{{ absolute_url(path('verify_email', {token: token})) }}</a></p>
 <p>Ce lien expirera dans 3 heures</p>
