--- a/templates/front/footer.html.twig
+++ b/templates/front/footer.html.twig
@@ -1,24 +1,14 @@
 <footer>
   <div  class="footer ">
    
-    <ul class="social-icon">
-      <li class="social-icon__item"><a class="social-icon__link" href="#">
-          <ion-icon name="logo-facebook"></ion-icon>
-        </a></li>
-      
-      <li class="social-icon__item"><a class="social-icon__link" href="#">
-          <ion-icon name="logo-linkedin"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="#">
-          <ion-icon name="logo-instagram"></ion-icon>
-        </a></li>
-    </ul>
-    <ul class="menu">
-      <li class="menu__item"><a class="menu__link" href="#">Accueil</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Qui somme Nous</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Mentions Légales</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Nous Contacter</a></li>
+   
+    <ul class="menu ">
+      <li class="menu__item"><a class="menu__link" href="{{ path('app_index') }}">Accueil</a></li>
+      <li class="menu__item"><a class="menu__link" href="{{ path('quisuisje') }}"> Qui suis-je ?</a></li>
+      <li class="menu__item"><a class="menu__link" href="{{ path('mentions') }}">Mentions Légales</a></li>
+ 
 
     </ul>
     <p>&copy;2023 Caroline | All Rights Reserved</p>
+    </div>
   </footer>
