--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -6,9 +6,9 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <div class="container-resetpass">
+    <div class="container-resetpass mb-3">
     <h3 class="text-center py-5">Réinstallation le mot de pass</h3>
-<div class="formsection">
+<div class="formsection ">
     {{ form_start(requestPassForm) }}
         {{ form_row(requestPassForm.email) }}
         <div>
