--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
-<div class="container-resetpass">
+<div class="container-resetpass mb-4">
     <h3 class="text-center py-5">Réinstallation de mot de pass</h3>
 <div class="formsection">
     {{ form_start(resetForm) }}
