--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'sans-header-footer.html.twig' %}
+{% extends 'base.html.twig' %}
 {% block title %}
 	{{ parent() }}CONNEXION
 {% endblock %}
@@ -16,26 +16,29 @@
 			<a href="{{ path('app_logout') }}">Me déconnecter</a>
 		</div>
 	{% endif %} #}
+	<h2 class="text-center h2connexion ">CONNECTEZ-VOUS</h2>
 	<div class="container-connexion">
-		<h2 class="text-center ">CONNECTEZ-VOUS</h2>
+		
 		<div class="formsection">
 			<form method="post">
-				<div class="my-3">
+				<div class="divinput">
 					<label class="pb-2" for="inputEmail">Email</label>
 					<input type="text" id="username" name="_username" value="{{ last_username }}" required autofocus>
 				</div>
-				<div class="my-3">
+				<div class=" divinput">
 					<label class="pb-2" for="inputPassword">Mot de passe</label>
 					<input type="password" name="_password" placeholder="password" autocomplete="current-password" required/>
 				</div>
-				{# <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
+				 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> 
+				 {# csrf_token est implementer avec security bundle  #}
 				<button type="submit" class="button mt-4">Me connecter</button>
 				<div class="pt-4 pb-3 d-flex justify-content-center">
 					<small>vous n'avez pas de compte?</small>
 					<a class="px-2" href="{{ path('register') }}">M'inscrire</a>
 				</div>
+				<div class=" d-flex justify-content-center">
 				<a href="{{ path('forgotten_password')}}">Mot de passe oublié?</a>
-
+                </div>
 					<form>
 				</div>
 			</div>
