--- a/templates/front/ludique.html.twig
+++ b/templates/front/ludique.html.twig
@@ -9,7 +9,7 @@
 <p >Apprendre l'arabe avec des chansons et des histoires est une excellente façon d'engager les enfants dans l'apprentissage de la langue.<br>Il est important de rendre l'apprentissage  à travers les chansons et les histoires amusant et interactif. 
 .<br>
 Commencez par des chansons simples et entraînez-vous à les écouter régulièrement.<br> Essayez de comprendre les paroles et leur signification.<br>Choisissez des histoires adaptées à l'âge et au niveau de compréhension des enfants.<br>
-L'apprentissage de l'arabe  avec cette méthode offre une expérience interactive et divertissante. N'hésitez pas à explorer notre différentes chansons et à créer un environnement positif et encourageant pour l'enfant. Avec de la pratique régulière et de la patience, l'apprentissage de l'arabe à travers les chansons peut être très bénéfique et agréable. <br>
+L'apprentissage de l'arabe  avec cette méthode offre une expérience interactive et divertissante. N'hésitez pas à explorer notre différentes chansons dans un environnement positif et encourageant pour l'enfant. Avec de la pratique régulière et de la patience, l'apprentissage de l'arabe à travers les chansons peut être très bénéfique et agréable. <br>
 Vous pouvez regarder notre séléctions de  
  
  {% for category in categories  %}
