--- a/templates/front/qui-suis-je.html.twig
+++ b/templates/front/qui-suis-je.html.twig
@@ -11,7 +11,7 @@
 <br>
 
 Mon objectif est de continuer d’améliorer et de compléter le contenu d’apprendre l’arabe facilement.
-Pour ce faire, je suis toujours à la recherche de nouvelles idées, n'hésiter pas à me tranmettre votre idées sur mon émail:info@francoarabophone.com</p>
+Pour ce faire, je suis toujours à la recherche de nouvelles idées, n'hésiter pas à me tranmettre votre idées sur mon émail: info@francoarabophone.fr</p>
 </div>
 
 
