--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="fr">
 
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Enseigner l'arabe aux enfants français :  apprendre de la langue arabe  à travers des leçons ludiques, des chansons,des histoires des activités manuelles et coloriages des lettres arabes ">
@@ -34,7 +35,6 @@
 <link rel="manifest" href="{{ asset('assets/images/favicon/site.webmanifest') }}"> 
 
    
-    
   
 </head>
 
@@ -54,6 +54,7 @@
  {% include 'front/footer.html.twig' %} 
 
 {%  block javascript %}
+{# <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YFZSGLN8V0"></script>
  <script>
@@ -62,10 +63,10 @@
   gtag('js', new Date());
 
    gtag('config', 'G-YFZSGLN8V0');
- </script> 
+</script> #}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
    <script src="{{ asset('assets/JS/script.js') }}"></script> 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+   
     
  
   {% endblock %}
