--- a/templates/front/footer.html.twig
+++ b/templates/front/footer.html.twig
@@ -5,8 +5,8 @@
     <ul class="menu ">
       <li class="menu__item"><a class="menu__link" href="{{ path('app_index') }}">Accueil</a></li>
       <li class="menu__item"><a class="menu__link" href="{{ path('quisuisje') }}"> Qui suis-je ?</a></li>
-      <li class="menu__item"><a class="menu__link" href="{{ path('mentions') }}">Mentions Légales</a></li>
- 
+      <li class="menu__item"><a class="menu__link" href="{{ path('mentions') }}">Conditions Générales d'Utilisation</a></li>
+      <li class="menu__item"><a class="menu__link" href="{{ path('politique') }}">Politique de protection des données</a></li>  
 
     </ul>
     <p>&copy;2023 Caroline | All Rights Reserved</p>
