--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
  {% include 'front/footer.html.twig' %} 
 
 {%  block javascript %}
-{# <!-- Google tag (gtag.js) -->
+
 <!-- Google tag (gtag.js) -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YFZSGLN8V0"></script>
  <script>
@@ -63,7 +63,7 @@
   gtag('js', new Date());
 
    gtag('config', 'G-YFZSGLN8V0');
-</script> #}
+</script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
    <script src="{{ asset('assets/JS/script.js') }}"></script> 
    
