--- a/templates/comments/listcomments.html.twig
+++ b/templates/comments/listcomments.html.twig
@@ -1,3 +1,5 @@
+ {# page affichant des témoignages (commentaires) de clients, avec la possibilité d'ajouter un nouvel avis #}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Les avis{% endblock %}
@@ -8,9 +10,10 @@
       <h4 class="text-center">Ce que disent nos clients!</h4>
  
       <div class="testimonial">
+      {# afficher les commentaires #}
       {% for comment in comments %}
         <div class="testimonial-info">
-          <h4>{{ comment.user.nickname}}</h4>
+          <h4>{{ comment.user.nickname}}</h4> 
         </div>
         <div class="testimonial-content">
           <p>
@@ -21,7 +24,7 @@
         {% endfor %}
       </div>
  <div class="d-flex justify-content-center py-4 ">
-  <a href="{{ path('add_comment')}}" class="button"  >Ajouter mon avis</a></div>
+  <a href="{{ path('add_comment')}}" class="button" >Ajouter mon avis</a></div>
     </div>
 
   
