--- a/templates/front/header.html.twig
+++ b/templates/front/header.html.twig
@@ -20,13 +20,13 @@
                   src="{{ asset('assets/images/flaticon/arabe.png') }}"
                   alt="Methode logo image">Méthode</a>
               <div class="dropdown-content">
-                {# {% for category in categories  %}
+                 {# {% for category in categories  %}
 								{% if category.title is same as ('Leçons') or category.title is same as ('Activités')  %}
 
 									<a href="{{ path('index_category',{'categoryId': category.id }) }}">{{ category.title }}</a>
 								{% endif %}
 
-							{% endfor %} #}
+							{% endfor %}  #}
               </div>
             </div>
           </li>
@@ -37,13 +37,13 @@
                   src="{{ asset('assets/images/flaticon/ludique.png') }}"
                   alt="ludique logo image">Ludique</a >
               <div class="dropdown-content">
-			{# {% for category in categories  %}
+			 {# {% for category in categories  %}
 							{% if category.title is same as ('Chansons') or category.title is same as ('Histoires') or category.title is same as ('Coloriage') %}
 								
 
 									<a href="{{ path('index_category',{'categoryId': category.id }) }}">{{ category.title }}</a>
 								{% endif %}
-							{% endfor %} #}
+							{% endfor %}  #}
 
               </div>
             </div>
@@ -64,7 +64,7 @@
               >Témoignages</a
             >
           </li>
-		  {# {% if is_granted('ROLE_ADMIN')%}
+		   {% if is_granted('ROLE_ADMIN')%}
           <li>
             <a href="{{ path('admin_backoffice') }}"
               ><img
@@ -73,7 +73,7 @@
               >Admin</a
             >
           </li>
-		  {% endif %} #}
+		  {% endif %} 
 
         </ul>
 		 <div class="close-btn">
